# stellargive

./: .env  .env.example  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  pr.md
contracts/stellar-give/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
contracts/stellar-give/.cargo/: audit.toml  config.toml
contracts/stellar-give/src/: lib.rs
contracts/stellar-give/test_snapshots/tests/: cancel_campaign_blocks_when_raised_amount_is_positive.1.json  cancel_campaign_rejects_non_creator_auth.1.json  cancel_campaign_requires_creator_auth_and_emits_event.1.json  claim_after_deadline_when_target_not_met.1.json  claim_funds_fails_when_admin_not_initialized.1.json  claim_funds_fee_deducted_from_beneficiary_payout.1.json  claim_funds_fee_plus_net_equals_gross.1.json  claim_when_target_met_transfers_to_beneficiary.1.json  create_and_get_campaign.1.json  create_campaign_accepts_empty_description.1.json  create_campaign_accepts_valid_sac_token.1.json  create_campaign_emits_created_event.1.json  create_campaign_enforces_creator_campaign_limit.1.json  create_campaign_enforces_max_duration.1.json  create_campaign_enforces_title_length_limit.1.json  create_campaign_rejects_contract_address_as_beneficiary.1.json  create_campaign_rejects_description_over_500_chars.1.json  (+23 more)
contracts/stellar-give/tests/: fuzz_claim.rs  fuzz_donate.rs  test_boundary.rs  test_campaign.rs  test_claim_accuracy.rs  test_event_topics.rs  test_storage.rs
docs/: ARCHITECTURE.md  (+4 more)
(+185 files in other folders)
